--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "bootstrap": "^4.6.1",
+    "bootstrap-vue": "^2.21.2",
     "vue": "^3.2.29",
     "vue-router": "^4.0.12"
   },
